--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ headers = { version = "0.4.0", features = [] }
 blocking = "1.5.1"
 regex = { version = "1.10.2", features = [] }
 serde = { version = "1.0.193", features = ["derive"] }
+clap = { version = "4.4.12", features = ["derive"] }
